--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Answer Guide</title>
+    <title>Answer - Black Team</title>
     <meta name="description" content="Webpage">
     
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="stylesheet.css"></link>
     
   </head>
   
